--- a/aprox.bib
+++ b/aprox.bib
@@ -182,7 +182,7 @@ series = {STOC'02}
 
 @article{BPRST'17,
 author = {Byrka, Jaros\l{}aw and Pensyl, Thomas and Rybicki, Bartosz and Srinivasan, Aravind and Trinh, Khoa},
-title = {An Improved Approximation for K-Median and Positive Correlation in Budgeted Optimization},
+title = {An Improved Approximation for $k$-Median and Positive Correlation in Budgeted Optimization},
 year = {2017},
 issue_date = {April 2017},
 publisher = {Association for Computing Machinery},
@@ -261,7 +261,7 @@ url = {https://doi.org/10.1145/5925.5933},
 doi = {10.1145/5925.5933},
 abstract = {In this paper a powerful, and yet simple, technique for devising approximation algorithms for a wide variety of NP-complete problems in routing, location, and communication network design is investigated. Each of the algorithms presented here delivers an approximate solution guaranteed to be within a constant factor of the optimal solution. In addition, for several of these problems we can show that unless P = NP, there does not exist a polynomial-time algorithm that has a better performance guarantee.},
 journal = {J. ACM},
-month = {may},
+OPTmonth = {may},
 pages = {533–550},
 numpages = {18}
 }
@@ -282,7 +282,7 @@ numpages = {18}
 }
 
 @misc{jain2002greedy,
-      title={Greedy Facility Location Algorithms Analyzed using Dual Fitting with Factor-Revealing LP}, 
+      title={Greedy Facility Location Algorithms Analyzed using Dual Fitting with Factor-Revealing {LP}}, 
       author={Kamal Jain and Mohammad Mahdian and Evangelos Markakis and Amin Saberi and Vijay V. Vazirani},
       year={2002},
       eprint={cs/0207028},
