--- a/facility/primaldual.tex
+++ b/facility/primaldual.tex
@@ -5,7 +5,7 @@ Chamamos uma solução $(v,w)$ para o programa dual de \emph{maximal} se não ex
 \begin{enumerate}[(i)]
     \item $v_j \leq v'_j$ para todo cliente $j$;
     \item $w_{ij} \leq w'_{ij}$ para todo cliente $j$ e instalação $i$;
-    \item $v_j < v'_j$ para algum cliente $j$,
+    \item $v_j < v'_j$ para algum cliente $j$;
 \end{enumerate}
 ou seja, não conseguimos encontrar uma solução viável com valor objetivo maior apenas aumentando os valores das variáveis.
 
