--- a/k-centros/guloso.tex
+++ b/k-centros/guloso.tex
@@ -32,7 +32,7 @@ Seja $G = (V,E)$ o grafo da instância do problema e $c_e$ o custo de uma aresta
 
     Vamos mostrar que essa análise é justa, ou seja, existe uma instância $I(G,c,k)$ em que o algoritmo devolve uma solução $C$ tal que raio$(C) = 2 \opt(I)$. 
 
-    Seja $G$ um grafo com pelo menos $k+2$ vértices em que as arestas têm custo 1 ou 2. O grafo induzido pelas arestas de custo 1 é uma estrela, como mostrado na figura abaixo.
+    Seja $G$ um grafo com pelo menos $k+2$ vértices em que as arestas têm custo 1 ou~2. O grafo induzido pelas arestas de custo 1 é uma estrela, como mostrado na figura abaixo.
     \[
     \begin{tikzpicture}
         % Number of outer vertices in the star
