--- a/facility/relaxação.tex
+++ b/facility/relaxação.tex
@@ -12,13 +12,14 @@ Nosso programa inteiro terá dois tipos de variáveis: uma variável $y_i$ para 
 \end{align}
 A restrição~\eqref{eq:inst} garante que todo cliente esteja associado a alguma instalação, a restrição~\eqref{eq:fac} garante que todo cliente esteja associado apenas a instalações abertas.
 
-Para a relaxação, apenas impomos que $x_{ij} \geq 0$ e $y_i \geq 0$ no lugar de~\eqref{fl:x} e~\eqref{fl:y}, respectivamente. Assim, temos o seguinte programa linear correspondente a nossa relaxação:
+Para a relaxação, apenas impomos que $x_{ij} \geq 0$ e $y_i \geq 0$ no lugar de~\eqref{fl:x} e~\eqref{fl:y}, respectivamente. Assim, temos o seguinte programa linear correspondente à nossa relaxação:
+
     \begin{align}
         \text{Minimizar} \quad & \sum_{i \in F}f_iy_i + \sum_{i\in F,j\in D}c_{ij}x_{ij} \tag{P1} \label{P1}\\
         \text{sujeito a} \quad & \sum_{i\in F} x_{ij}\geq1,  \forall j \in D \tag{P2} \label{P2}\\
         &y_i - x_{ij} \geq 0, \, \; \; \forall i\in F,j\in D \tag{P3} \label{P3}\\
         &x_{ij} \geq 0,\quad \forall i\in F,j\in D\tag{P4}\label{P4}\\
-        &y_i \geq 0, \quad \; \,\forall i\in F \tag{P5} \label{P5}
+        &y_i \geq 0, \quad \; \,\forall i\in F. \tag{P5} \label{P5}
        \end{align}
 
     A partir desse programa linear conseguimos construir o seu dual que é o seguinte:
