--- a/aprox.bib
+++ b/aprox.bib
@@ -289,3 +289,23 @@ numpages = {18}
       archivePrefix={arXiv},
       primaryClass={cs.DS}
 }
+
+@article{Feige98,
+author = {Feige, Uriel},
+title = {A threshold of ln n for approximating set cover},
+year = {1998},
+issue_date = {July 1998},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {45},
+number = {4},
+issn = {0004-5411},
+url = {https://doi.org/10.1145/285055.285059},
+doi = {10.1145/285055.285059},
+abstract = {Given a collection ℱ of subsets of S = {1,…,n}, set cover is the problem of selecting as few as possible subsets from ℱ such that their union covers S,, and max k-cover is the problem of selecting k subsets from ℱ such that their union has maximum cardinality. Both these problems are NP-hard. We prove that (1 - o(1)) ln n is a threshold below which set cover cannot be approximated efficiently, unless NP has slightly superpolynomial time algorithms. This closes the gap (up to low-order terms) between the ratio of approximation achievable by the greedy alogorithm (which is (1 - o(1)) ln n), and provious results of Lund and Yanakakis, that showed hardness of approximation within a ratio of (log2 n) / 2 ≃0.72 ln n. For max k-cover, we show an approximation threshold of (1 - 1/e)(up to low-order terms), under assumption that P ≠ NP.},
+journal = {J. ACM},
+month = {jul},
+pages = {634–652},
+numpages = {19},
+keywords = {approximation ratio, set cover}
+}
