--- a/main.tex
+++ b/main.tex
@@ -88,6 +88,9 @@ Hsu e Nemhauser~\cite{HSU1979209} mostraram que não existe algoritmo polinomial
 
 \subsection{Algoritmo guloso}
     \input{facility/guloso.tex}
+
+\subsection{Inaproximabilidade}
+    \input{facility/inaprox.tex}
 \newpage
 \bibliographystyle{plain}
 \bibliography{aprox.bib}
