adicionado inaprox do facility e do k-median, e intro do k-median

--- a/main.tex
+++ b/main.tex
@@ -91,6 +91,12 @@ Hsu e Nemhauser~\cite{HSU1979209} mostraram que não existe algoritmo polinomial
 
 \subsection{Inaproximabilidade}
     \input{facility/inaprox.tex}
+    
+\section{$k$-Mediana}
+    \input{k-median/intro.tex}
+
+\subsection{Inaproximabilidade}
+    \input{k-median/inaprox.tex}
 \newpage
 \bibliographystyle{plain}
 \bibliography{aprox.bib}
