adicao do busca local do k-median

--- a/main.tex
+++ b/main.tex
@@ -95,8 +95,12 @@ Hsu e Nemhauser~\cite{HSU1979209} mostraram que não existe algoritmo polinomial
 \section{$k$-Mediana}
     \input{k-median/intro.tex}
 
+\subsection{Busca local}
+    \input{k-median/buscalocal.tex}
+
 \subsection{Inaproximabilidade}
     \input{k-median/inaprox.tex}
+
 \newpage
 \bibliographystyle{plain}
 \bibliography{aprox.bib}
